[project]
# Nom du package pour l'appeler
name = "chempkg"

# Version du package
version = "0.1.0"
authors = [
    { name = "Sidharth", email = "Sidharth.Parthipan@etu.sorbonne-universite.fr" }
]
description = "Package Python pour manipuler des atomes, molécules et réactions chimiques simples"
# Versions de Python compatibles
requires-python = ">=3.10,<3.13"
# Liste des packages necessaires , avec leur version
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
